k8s/components/tls-service/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: service-name
  namespace: service-name
  labels:
    kubernetes.io/service-name: service-name
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8443
endpoints:
  - addresses:
      - 10.10.10.10
    conditions: { }
