k8s/components/tls-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
  namespace: service-name
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
