k8s/components/tls-service/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: service-name-tls
  namespace: service-name
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "service-name.ravil.space"
  rules:
    - backendRefs:
        - name: service-name
          port: 443
